Fix htmlattrs; fix global container on ios

--- a/assets/style/index.styl
+++ b/assets/style/index.styl
@@ -11,10 +11,10 @@ body
     background-color var(--raisin-black)
     color var(--cultured)
     font-weight 400
-    min-height 100vh
 
 .global-container
-    min-height 100vh
+    height 100vh
+    max-height -webkit-fill-available
 
 .raisin-black
     color var(--raisin-black)
